profiling-using-exp-runner/backup_FINAL_RESULTS/dijkstra_experiment/run_0_repetition_0/energibridge.log
sampling interval: 200, target function: dijkstra, input size: frozenset({('E', frozenset({('M', 3), ('H', 2), ('C', 8), ('I', 5), ('J', 6), ('D', 6), ('A', 5), ('F', 4), ('N', 4), ('O', 5), ('G', 7), ('K', 1), ('L', 2), ('B', 3)})), ('I', frozenset({('C', 9), ('L', 4), ('B', 1), ('M', 5), ('H', 1), ('J', 2), ('D', 2), ('O', 7), ('A', 7), ('F', 6), ('N', 6), ('G', 3), ('K', 3), ('E', 5)})), ('G', frozenset({('L', 1), ('A', 6), ('E', 7), ('H', 5), ('M', 2), ('B', 4), ('O', 4), ('J', 8), ('N', 3), ('K', 9), ('C', 3), ('F', 2), ('D', 1), ('I', 3)})), ('J', frozenset({('A', 3), ('M', 3), ('D', 7), ('C', 5), ('O', 5), ('G', 8), ('I', 2), ('F', 4), ('E', 6), ('N', 4), ('K', 1), ('L', 2), ('H', 7), ('B', 9)})), ('N', frozenset({('J', 4), ('B', 5), ('C', 9), ('I', 6), ('E', 4), ('F', 8), ('M', 1), ('K', 8), ('D', 6), ('L', 9), ('H', 4), ('A', 7), ('G', 3), ('O', 3)})), ('L', frozenset({('K', 6), ('D', 4), ('N', 9), ('H', 2), ('A', 5), ('C', 7), ('G', 1), ('M', 8), ('O', 1), ('J', 2), ('B', 3), ('I', 4), ('E', 2), ('F', 6)})), ('H', frozenset({('B', 5), ('M', 3), ('G', 5), ('O', 5), ('K', 8), ('N', 4), ('A', 2), ('L', 2), ('C', 4), ('I', 1), ('F', 3), ('D', 8), ('E', 2), ('J', 7)})), ('C', frozenset({('K', 6), ('L', 7), ('A', 3), ('I', 9), ('F', 7), ('H', 4), ('J', 5), ('M', 8), ('O', 1), ('D', 2), ('E', 8), ('G', 3), ('B', 6), ('N', 9)})), ('F', frozenset({('H', 3), ('J', 4), ('O', 9), ('G', 2), ('I', 6), ('E', 4), ('B', 8), ('N', 8), ('K', 5), ('L', 6), ('C', 7), ('D', 5), ('A', 1), ('M', 7)})), ('M', frozenset({('H', 3), ('G', 2), ('O', 2), ('A', 6), ('J', 3), ('C', 8), ('I', 5), ('F', 7), ('N', 1), ('B', 4), ('E', 3), ('D', 5), ('K', 7), ('L', 8)})), ('A', frozenset({('G', 6), ('D', 4), ('E', 5), ('H', 2), ('J', 3), ('M', 6), ('F', 1), ('O', 8), ('K', 4), ('N', 7), ('L', 5), ('C', 3), ('I', 7), ('B', 2)})), ('O', frozenset({('L', 1), ('D', 7), ('H', 5), ('M', 2), ('C', 1), ('A', 8), ('J', 5), ('G', 4), ('F', 9), ('K', 9), ('B', 6), ('I', 7), ('E', 5), ('N', 3)})), ('K', frozenset({('O', 9), ('E', 1), ('F', 5), ('N', 8), ('D', 3), ('H', 8), ('L', 6), ('I', 3), ('J', 1), ('M', 7), ('A', 4), ('G', 9), ('B', 2), ('C', 6)})), ('D', frozenset({('F', 5), ('C', 2), ('L', 4), ('B', 7), ('I', 2), ('H', 8), ('E', 6), ('G', 1), ('K', 3), ('M', 5), ('O', 7), ('N', 6), ('A', 4), ('J', 7)})), ('B', frozenset({('O', 6), ('K', 2), ('F', 8), ('D', 7), ('N', 5), ('H', 5), ('L', 3), ('J', 9), ('A', 2), ('E', 3), ('I', 1), ('G', 4), ('M', 4), ('C', 6)}))})
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import memory.dijkstra as module; graph = frozenset({(E, frozenset({(M, 3), (H, 2), (C, 8), (I, 5), (J, 6), (D, 6), (A, 5), (F, 4), (N, 4), (O, 5), (G, 7), (K, 1), (L, 2), (B, 3)})), (I, frozenset({(C, 9), (L, 4), (B, 1), (M, 5), (H, 1), (J, 2), (D, 2), (O, 7), (A, 7), (F, 6), (N, 6), (G, 3), (K, 3), (E, 5)})), (G, frozenset({(L, 1), (A, 6), (E, 7), (H, 5), (M, 2), (B, 4), (O, 4), (J, 8), (N, 3), (K, 9), (C, 3), (F, 2), (D, 1), (I, 3)})), (J, frozenset({(A, 3), (M, 3), (D, 7), (C, 5), (O, 5), (G, 8), (I, 2), (F, 4), (E, 6), (N, 4), (K, 1), (L, 2), (H, 7), (B, 9)})), (N, frozenset({(J, 4), (B, 5), (C, 9), (I, 6), (E, 4), (F, 8), (M, 1), (K, 8), (D, 6), (L, 9), (H, 4), (A, 7), (G, 3), (O, 3)})), (L, frozenset({(K, 6), (D, 4), (N, 9), (H, 2), (A, 5), (C, 7), (G, 1), (M, 8), (O, 1), (J, 2), (B, 3), (I, 4), (E, 2), (F, 6)})), (H, frozenset({(B, 5), (M, 3), (G, 5), (O, 5), (K, 8), (N, 4), (A, 2), (L, 2), (C, 4), (I, 1), (F, 3), (D, 8), (E, 2), (J, 7)})), (C, frozenset({(K, 6), (L, 7), (A, 3), (I, 9), (F, 7), (H, 4), (J, 5), (M, 8), (O, 1), (D, 2), (E, 8), (G, 3), (B, 6), (N, 9)})), (F, frozenset({(H, 3), (J, 4), (O, 9), (G, 2), (I, 6), (E, 4), (B, 8), (N, 8), (K, 5), (L, 6), (C, 7), (D, 5), (A, 1), (M, 7)})), (M, frozenset({(H, 3), (G, 2), (O, 2), (A, 6), (J, 3), (C, 8), (I, 5), (F, 7), (N, 1), (B, 4), (E, 3), (D, 5), (K, 7), (L, 8)})), (A, frozenset({(G, 6), (D, 4), (E, 5), (H, 2), (J, 3), (M, 6), (F, 1), (O, 8), (K, 4), (N, 7), (L, 5), (C, 3), (I, 7), (B, 2)})), (O, frozenset({(L, 1), (D, 7), (H, 5), (M, 2), (C, 1), (A, 8), (J, 5), (G, 4), (F, 9), (K, 9), (B, 6), (I, 7), (E, 5), (N, 3)})), (K, frozenset({(O, 9), (E, 1), (F, 5), (N, 8), (D, 3), (H, 8), (L, 6), (I, 3), (J, 1), (M, 7), (A, 4), (G, 9), (B, 2), (C, 6)})), (D, frozenset({(F, 5), (C, 2), (L, 4), (B, 7), (I, 2), (H, 8), (E, 6), (G, 1), (K, 3), (M, 5), (O, 7), (N, 6), (A, 4), (J, 7)})), (B, frozenset({(O, 6), (K, 2), (F, 8), (D, 7), (N, 5), (H, 5), (L, 3), (J, 9), (A, 2), (E, 3), (I, 1), (G, 4), (M, 4), (C, 6)}))}); module.dijkstra(graph, A); 
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 6.99996711730957 for 0.22679436 sec of execution.
